--- a/pact-service.tests/pact-service.tests.csproj
+++ b/pact-service.tests/pact-service.tests.csproj
@@ -4,34 +4,49 @@
     <RootNamespace>pact_service.tests</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics">
+      <Version>2.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions">
+      <Version>2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc">
+      <Version>2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel">
+      <Version>2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console">
       <Version>2.1.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk">
       <Version>15.7.2</Version>
     </PackageReference>
-    <PackageReference Include="PactNet">
-      <Version>2.3.0</Version>
-    </PackageReference>
     <PackageReference Include="PactNet.Linux.x64">
-      <Version>2.3.0</Version>
+      <Version>2.3.1</Version>
     </PackageReference>
     <PackageReference Include="PactNet.OSX">
-      <Version>2.3.0</Version>
+      <Version>2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="PactNet">
+      <Version>2.3.1</Version>
     </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.3.1</Version>
     </PackageReference>
+    <PackageReference Include="xunit.runner.visualstudio">
+      <Version>2.3.1</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\pact-service\pact-service.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.AspNetCore, Version=2.1.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
       <HintPath>..\..\..\..\..\..\usr\local\share\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore\2.1.0\lib\netstandard2.0\Microsoft.AspNetCore.dll</HintPath>
     </Reference>
-    <Reference Include="PactNet, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\..\.nuget\packages\pactnet\2.3.1\lib\netstandard1.5\PactNet.dll</HintPath>
+    <Reference Include="Microsoft.AspNetCore.Hosting, Version=2.1.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+      <HintPath>..\..\..\..\..\..\usr\local\share\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.hosting\2.1.0\lib\netstandard2.0\Microsoft.AspNetCore.Hosting.dll</HintPath>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\pact-service\pact-service.csproj" />
   </ItemGroup>
 </Project>
