--- a/pact-service/pact-service.csproj
+++ b/pact-service/pact-service.csproj
@@ -11,4 +11,9 @@
   <ItemGroup>
     <ProjectReference Include="..\domain\domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json">
+      <Version>2.1.0</Version>
+    </PackageReference>
+  </ItemGroup>
 </Project>
