All tested but need to sort issue out on sh run

--- a/pact-consumer.tests/pact-consumer.tests.csproj
+++ b/pact-consumer.tests/pact-consumer.tests.csproj
@@ -26,4 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\pact-consumer\pact-consumer.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="logs" />
+  </ItemGroup>
 </Project>
